segunda entrega funes

--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -55,8 +55,8 @@
                     <p class="textoImg">albahaca</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
+            <div class="aa aa1P4">  
+                <p class="a">¡No hay plato de pasta sin albahaca! En la cocina italiana, es una de las imprescindibles entre las plantas para cocinar. Y es que esta especie aporta un sabor y aroma espectacular que hace que platos tan sencillos como la pizza o la pasta, se convierten en un auténtico manjar. También se usa mucho esta aromática en otros platos como salsas, guisos o incluso ensaladas. En cuanto a cuidados, la albahaca necesita semisombra por lo que será mucho más recomendable si la cultivas junto al resto de tus plantas aromáticas de interior. </p>
             </div> 
 
 
@@ -69,8 +69,8 @@
                     <p class="textoImg">cilantro</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">También llamada clemátide, se trata en realidad de todo un género de plantas trepadoras de gran velocidad de crecimiento. Cuenta con una gran cantidad de especies y cultivares y se encuentra de forma natural en casi cualquier región templada del mundo. En el jardín, resiste muy bien los cambios de temperatura y apenas necesita cuidados, siendo la única excepción el hecho de que necesita un considerable nivel de humedad.</p>
+            <div class="aa aa2P4">  
+                <p class="a">Es una hierba aromática muy parecida al perejil o la albahaca, por lo que requiere de cuidados muy similares. En la cocina, el cilantro es una especie que se usa con mucha frecuencia tanto en guisos, salsas o ensaladas. En Canarias, el cilantro es una de las aromáticas esenciales para hacer una de sus salsas más típicas, el mojo. </p>
             </div>
 
 
@@ -83,8 +83,8 @@
                     <p class="textoImg">eneldo</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Estas preciosas flores originarias de China y popularizadas en Japón son una gran forma de embellecer tu jardín a cambio de muy poco trabajo, especialmente en climas fríos o frescos, aunque no extremos. Lo único que necesitan es abundante luz indirecta para que sus flores se abran, siendo muy vistosas y fragantes. Los crisantemos alcanzan alturas de hasta metro y medio.</p>
+            <div class="aa aa3P4">  
+                <p class="a">Es una planta medicinal con muchas propiedades beneficiosas para la salud, pero también es uno de nuestros condimentos favoritos. Su cultivo es sencillo, ya que requiere bastante sol y un riego moderado. Además, el eneldo es una de las hierbas aromáticas que mejor combina con los pescados, en concreto con el salmón. Si tienes alguna ocasión especial, tienes que probar el salmón Wellington con eneldo. ¡Y está delicioso!</p>
             </div>
 
 
@@ -97,8 +97,8 @@
                     <p class="textoImg">estragon</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">El género Hedera cuenta con 15 especies, siendo la más conocida de ellas la hiedra común o Hedera helix. Se trata de una de las más conocidas plantas trepadoras y también de las más usadas en cobertura de muros y fachadas. Sus únicos cuidados destacables son que algunas de sus especies crecen tanto que es necesario controlarlas y que no tolera bien el sol directo.</p>
+            <div class="aa aa4P4">  
+                <p class="a">No es una de las plantas aromáticas más conocidas, pero se suele usar bastante en la cocina. El estragón es una planta aromática con un olor bastante fuerte por lo que se usa para aromatizar vinagres, salsas o ensaladas. En cuanto a sus cuidados, el estragón es una planta que no tolera muy bien los climas muy fríos ni la humedad. Requiere de mucha luz y de un buen drenaje.</p>
             </div>
 
 
@@ -111,8 +111,8 @@
                     <p class="textoImg">eucalipto</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">El género Jasminum cuenta con unas 200 especies, todas ellas provenientes de zonas tropicales y subtropicales y son unas de las mejores plantas de exterior fáciles de cuidar. Se trata de plantas trepadoras y arbustos de exterior, con unas flores blancas tan decorativas como fragantes. No es nada exquisito con sus cuidados, siendo su único requisito importante que requiere de abundante luz.</p>
+            <div class="aa aa5P4">  
+                <p class="a">Pocos piensan en el eucalipto como en una planta de interior, pero realmente es muy fácil de mantener en un rincón luminoso de la casa si evitamos corrientes. Además de hermosas, sus hojas verdeazuladas difunden su inconfundible aroma. No hay que olvidarse de podarlo para que mantenga un cuerpo abundante y no se alargue demasiado. Si lo colocamos en el baño, el vapor potenciará su fragancia.</p>
             </div>
 
 
@@ -125,8 +125,8 @@
                     <p class="textoImg">flor de cera</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Una de las plantas aromáticas más populares y apreciadas es la lavanda. Su éxito se debe a sus bonitas espigas florales, de tonos lilas y violetas que pueden verse durante todo el año, y al fresco y agradable aroma de estas, que se usa en todo tipo de productos. Es excepcionalmente resistente, tolerando bien tanto el frío como el calor, y solo necesita una buena cantidad de luz y riegos moderados.</p>
+            <div class="aa aa6P4">  
+                <p class="a">La flor de cera es una planta trepadora y resistente que se cultiva en interiores, pero también puede estar en el exterior a las sombra. Tienen vistosas hojas verdes y unas pequeñas flores blancas con el centro rojo y aspecto encerado que desprenden un perfume dulce. En invierno se deben regar únicamente una vez cada 15 días y pueden llegar a tolerar temperaturas bastante bajas.</p>
             </div>
 
 
@@ -139,8 +139,8 @@
                     <p class="textoImg">hierba buena</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Las margaritas son especialmente resistentes cuando buscamos plantas de exterior resistentes al sol. En climas cálidos, estas flores arquetípicas y tan conocidas en todo el mundo no necesitarán apenas de ningún cuidado, siendo necesario solo regarlas de forma moderada en los meses cálidos, ya que en invierno será suficiente con lluvias o riegos esporádicos.</p>
+            <div class="aa aa7P4">  
+                <p class="a">Es una de las plantas aromáticas más usadas en la cocina. La hierbabuena tiene un aroma muy similar a la menta, pero algo más suave. En cocina, se suele usar sobre todo en repostería. En cuanto a cuidados, necesita un lugar soleado o semisombra para crecer en perfecto estado.</p>
             </div>
 
 
@@ -153,8 +153,8 @@
                     <p class="textoImg">laurel</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Su nombre científico es Chamaerops humilis y se trata de la única palmera silvestre que existe con origen en Europa. Es una planta muy tupida, de porte bajo y con un sistema radicular de gran desarrollo. Es bastante resistente y su altura no supera habitualmente los 3 o 4 metros. Su debilidad son las heladas, que no tolera. Es una de las plantas de exterior que necesitan poca agua más fáciles de cuidar.</p>
+            <div class="aa aa8P4">  
+                <p class="a">El laurel es una planta aromática muy utilizada en cocina para marinar platos, condimentar guisos o sopas. Se puede usar tanto sus hojas frescas como secas. En cuanto a cuidados, esta planta necesita semisombra para evitar que sus hojas se sequen y un riego moderado. Esta planta aromática está acostumbrada a la sequía por lo que si le añadimos mucha agua, lo más probable es que se estropee.</p>
             </div>
 
 
@@ -167,8 +167,8 @@
                     <p class="textoImg">lavanda</p>
                 </div>
             </div>
-            <div class="aa">
-                <p class="a">Los rosales son arbustos de la familia de las rosáceas, conocidos por sus preciosas y fragantes flores, populares en todo el mundo, y por sus espinas. A pesar de su popularidad, son arbustos de fácil cultivo, que solo necesitan abundante luz natural y un riego abundante durante sus meses de floración, especialmente si queremos ver rosas grandes y bonitas. Son muy adecuados para climas calurosos.</p>
+            <div class="aa aa9P4">
+                <p class="a">Será difícil que en septiembre encuentres plantas de con flor, así que hazte con un aromatizador de lavanda. Será ideal para toda la casa y especialmente para el dormitorio. La lavanda combate el bajón postvacacional y además ayuda a regular el sueño.</p>
             </div>
 
 
@@ -180,8 +180,8 @@
                     <p class="textoImg">limonero</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
+            <div class="aa aa10P4">  
+                <p class="a">Los limoneros y otros árboles de otras plantas cítricas (naranja, lima...) son el mejor modo de refrescar el ambiente de tus habitaciones. A cambio, sólo hay que cuidar de que tengan buena luz (necesita de 8 a 12 horas de luz al día), un sustrato que drene bien y abundante riego. La temperatura no debe bajar de 12°C y deben mantener cierta humedad, por lo que, para mantenerla, es aconsejable colocar los tiestos sobre gravilla</p>
             </div> 
 
 
@@ -194,8 +194,8 @@
                     <p class="textoImg">menta</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
+            <div class="aa aa11P4">  
+                <p class="a">La menta es una de las plantas aromáticas con más sabor y frescura para añadir a nuestros platos preferidos en la cocina. Ahora esta planta aromática también la puedes tener en casa, deleitándote con su fresco aroma. Eso sí, también requiere de mucha luminosidad y un riego regular, aunque sin encharcarse.</p>
             </div> 
 
 
@@ -208,8 +208,8 @@
                     <p class="textoImg">perejil</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">También llamada clemátide, se trata en realidad de todo un género de plantas trepadoras de gran velocidad de crecimiento. Cuenta con una gran cantidad de especies y cultivares y se encuentra de forma natural en casi cualquier región templada del mundo. En el jardín, resiste muy bien los cambios de temperatura y apenas necesita cuidados, siendo la única excepción el hecho de que necesita un considerable nivel de humedad.</p>
+            <div class="aa aa12P4">  
+                <p class="a">Junto con la albahaca, esta planta es una de las plantas más utilizadas para cocina, pero también de las más delicadas. Para que aguante mucho más tiempo, lo aconsejable es dejarla en el interior de la casa. Para cultivar perejil, podemos comprarlo ya crecido o con semillas. En cuanto a su cuidado, requiere de semisombra y de tierra húmeda.</p>
             </div>
 
 
@@ -222,8 +222,8 @@
                     <p class="textoImg">romero</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Estas preciosas flores originarias de China y popularizadas en Japón son una gran forma de embellecer tu jardín a cambio de muy poco trabajo, especialmente en climas fríos o frescos, aunque no extremos. Lo único que necesitan es abundante luz indirecta para que sus flores se abran, siendo muy vistosas y fragantes. Los crisantemos alcanzan alturas de hasta metro y medio.</p>
+            <div class="aa aa13P4">  
+                <p class="a">Es una planta de exterior aromática muy fácil de cuidar. Aporta mucho sabor a las comidas y además podemos añadirlas tanto dentro como fuera de casa. Lo único que sí requiere esta planta es de mucho sol. Así que, si tienes una buena terraza o balcón al aire libre y con mucha luz, aprovéchalo para plantar un romero.</p>
             </div>
 
 
@@ -236,8 +236,8 @@
                     <p class="textoImg">salvia</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">El género Hedera cuenta con 15 especies, siendo la más conocida de ellas la hiedra común o Hedera helix. Se trata de una de las más conocidas plantas trepadoras y también de las más usadas en cobertura de muros y fachadas. Sus únicos cuidados destacables son que algunas de sus especies crecen tanto que es necesario controlarlas y que no tolera bien el sol directo.</p>
+            <div class="aa aa14P4">  
+                <p class="a">La salvia es una planta aromática de exterior excelente para dar un sabor especial a guisos, salsas y arroces debido a la dulzura que aporta con un toque amargo. También muy valorada entre las plantas medicinales. Aunque se puede cultivar en casa, es recomendable ponerla en el exterior y directamente en el suelo, ya que aguantará más tiempo. En cuanto a cuidados, requiere mucha luz, ambiente seco y riego moderado.</p>
             </div>
 
 
@@ -250,8 +250,8 @@
                     <p class="textoImg">tomillo</p>
                 </div>    
             </div>
-            <div class="aa">  
-                <p class="a">El género Jasminum cuenta con unas 200 especies, todas ellas provenientes de zonas tropicales y subtropicales y son unas de las mejores plantas de exterior fáciles de cuidar. Se trata de plantas trepadoras y arbustos de exterior, con unas flores blancas tan decorativas como fragantes. No es nada exquisito con sus cuidados, siendo su único requisito importante que requiere de abundante luz.</p>
+            <div class="aa aa15P4">  
+                <p class="a">El tomillo es una planta muy aromática y con muchas propiedades medicinales. Además, es una planta muy resistente sobre todo si la cultivamos en el suelo. Si cultivamos en maceta, es importante que esté bien drenada.</p>
             </div>
 
 
@@ -264,8 +264,8 @@
                     <p class="textoImg">toronjil</p>
                 </div>
             </div>
-            <div class="aa">  
-                <p class="a">Una de las plantas aromáticas más populares y apreciadas es la lavanda. Su éxito se debe a sus bonitas espigas florales, de tonos lilas y violetas que pueden verse durante todo el año, y al fresco y agradable aroma de estas, que se usa en todo tipo de productos. Es excepcionalmente resistente, tolerando bien tanto el frío como el calor, y solo necesita una buena cantidad de luz y riegos moderados.</p>
+            <div class="aa aa16P4">  
+                <p class="a">La melisa es una hierba perenne mediterránea. Crece bien en interiores con luz abundante y su fresco aroma cítrico se difunde mejor si lo dejamos junto a una ventana abierta en los días cálidos. Su té es muy beneficioso para contrarrestar los dolores menstruales y también ayuda a calmar las palpitaciones nerviosas y a espantar los mosquitos.</p>
             </div>
 
 
