--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -54,7 +54,7 @@
                     <p class="textoImg">agave</p>
                 </div>    
             </div>
-            <div class="aa">  
+            <div class="aa aa1P3">  
                 <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
             </div> 
 
@@ -68,7 +68,7 @@
                     <p class="textoImg">clematis</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa2P3">  
                 <p class="a">También llamada clemátide, se trata en realidad de todo un género de plantas trepadoras de gran velocidad de crecimiento. Cuenta con una gran cantidad de especies y cultivares y se encuentra de forma natural en casi cualquier región templada del mundo. En el jardín, resiste muy bien los cambios de temperatura y apenas necesita cuidados, siendo la única excepción el hecho de que necesita un considerable nivel de humedad.</p>
             </div>
 
@@ -82,7 +82,7 @@
                     <p class="textoImg">crisantemo</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa3P3">  
                 <p class="a">Estas preciosas flores originarias de China y popularizadas en Japón son una gran forma de embellecer tu jardín a cambio de muy poco trabajo, especialmente en climas fríos o frescos, aunque no extremos. Lo único que necesitan es abundante luz indirecta para que sus flores se abran, siendo muy vistosas y fragantes. Los crisantemos alcanzan alturas de hasta metro y medio.</p>
             </div>
 
@@ -96,7 +96,7 @@
                     <p class="textoImg">hiedra</p>
                 </div>    
             </div>
-            <div class="aa">  
+            <div class="aa aa4P3">  
                 <p class="a">El género Hedera cuenta con 15 especies, siendo la más conocida de ellas la hiedra común o Hedera helix. Se trata de una de las más conocidas plantas trepadoras y también de las más usadas en cobertura de muros y fachadas. Sus únicos cuidados destacables son que algunas de sus especies crecen tanto que es necesario controlarlas y que no tolera bien el sol directo.</p>
             </div>
 
@@ -110,7 +110,7 @@
                     <p class="textoImg">jazmin</p>
                 </div>    
             </div>
-            <div class="aa">  
+            <div class="aa aa5P3">  
                 <p class="a">El género Jasminum cuenta con unas 200 especies, todas ellas provenientes de zonas tropicales y subtropicales y son unas de las mejores plantas de exterior fáciles de cuidar. Se trata de plantas trepadoras y arbustos de exterior, con unas flores blancas tan decorativas como fragantes. No es nada exquisito con sus cuidados, siendo su único requisito importante que requiere de abundante luz.</p>
             </div>
 
@@ -124,7 +124,7 @@
                     <p class="textoImg">lavanda</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa6P3">  
                 <p class="a">Una de las plantas aromáticas más populares y apreciadas es la lavanda. Su éxito se debe a sus bonitas espigas florales, de tonos lilas y violetas que pueden verse durante todo el año, y al fresco y agradable aroma de estas, que se usa en todo tipo de productos. Es excepcionalmente resistente, tolerando bien tanto el frío como el calor, y solo necesita una buena cantidad de luz y riegos moderados.</p>
             </div>
 
@@ -138,7 +138,7 @@
                     <p class="textoImg">margarita</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa7P3">  
                 <p class="a">Las margaritas son especialmente resistentes cuando buscamos plantas de exterior resistentes al sol. En climas cálidos, estas flores arquetípicas y tan conocidas en todo el mundo no necesitarán apenas de ningún cuidado, siendo necesario solo regarlas de forma moderada en los meses cálidos, ya que en invierno será suficiente con lluvias o riegos esporádicos.</p>
             </div>
 
@@ -152,7 +152,7 @@
                     <p class="textoImg">palmito</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa8P3">  
                 <p class="a">Su nombre científico es Chamaerops humilis y se trata de la única palmera silvestre que existe con origen en Europa. Es una planta muy tupida, de porte bajo y con un sistema radicular de gran desarrollo. Es bastante resistente y su altura no supera habitualmente los 3 o 4 metros. Su debilidad son las heladas, que no tolera. Es una de las plantas de exterior que necesitan poca agua más fáciles de cuidar.</p>
             </div>
 
@@ -166,7 +166,7 @@
                     <p class="textoImg">rosal</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa9P3">  
                 <p class="a">Los rosales son arbustos de la familia de las rosáceas, conocidos por sus preciosas y fragantes flores, populares en todo el mundo, y por sus espinas. A pesar de su popularidad, son arbustos de fácil cultivo, que solo necesitan abundante luz natural y un riego abundante durante sus meses de floración, especialmente si queremos ver rosas grandes y bonitas. Son muy adecuados para climas calurosos.</p>
             </div>
 
