--- a/pages/interior.html
+++ b/pages/interior.html
@@ -54,7 +54,7 @@
                     <p class="textoImg">potus</p>
                 </div>   
             </div>
-            <div class="aa">  
+            <div class="aa aa1P2">  
                 <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
             </div> 
 
@@ -68,7 +68,7 @@
                     <p class="textoImg">pata de elefante</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa2P2">  
                 <p class="a">Es una planta de interior muy alta. Puede llegar a medir un medio y medio en maceta, aunque e su hábitat natural puede alcanzar los 10 m. Se caracteriza por su grueso tronco, similar a una pata de elefante, de ahí su nombre. Es muy decorativa y sus cuidados son muy sencillos. Necesita grandes dosis de luz, pero no directa. Se recomienda un buen drenaje y comprobar la humedad de la tierra antes de regalarla.</p>
             </div> 
 
@@ -82,7 +82,7 @@
                     <p class="textoImg">maranta leuconera</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa3P2">  
                 <p class="a">Es conocida también como Maranta tricolor y se la llama planta de la oración porque por las noches tiende a cerrar sus hojas ligeramente. Necesita mucha luz, pero indirecta para que muestre todos sus vibrantes colores, tanto de las hojas como de sus nervios. Necesita un sustrato turboso y le gusta la humedad ambiental, por lo que convendrá pulverizar sus hojas en verano. Coloca un plato con guijarros debajo de la maceta y tras los riegos elimina el agua sobrante.</p>
             </div> 
 
@@ -96,7 +96,7 @@
                     <p class="textoImg">helecho</p>
                 </div>    
             </div>
-            <div class="aa">  
+            <div class="aa aa4P2">  
                 <p class="a">Fácil de cuidar y muy decorativos, los helechos están de moda. Son muy resistentes y no requieren de mucho mantenimiento. Lo ideal es colocarlos en un lugar con semisombra ,sin sol directo,. Les gusta la humedad, aunque un riego excesivo puede provocar la pudrición de las raíces (verás también que las hojas se ponen amarillentas). Para proporcionársela colócala sobre un plato con guijarros y agua, de manera que se vea beneficiada por su evaporación. Pulverizarla también ayuda.</p>
             </div> 
 
@@ -110,7 +110,7 @@
                     <p class="textoImg">ficus lyrata</p>
                 </div>    
             </div>
-            <div class="aa">  
+            <div class="aa aa5P2">  
                 <p class="a">El ficus lyrata es una planta que añade mucha naturaleza a tu casa gracias a sus ramas grandes y arqueadas, y a sus hojas puntiagudas. Su forma de arbolito quedará perfecto al lado de un gran ventanal, al pie de una escalera, junto al sofá o en cualquier rincón que necesite un subidón de vida y alegría verde. Además, ¡son muy resistentes!</p>
             </div> 
 
@@ -124,7 +124,7 @@
                     <p class="textoImg">cinta</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa6P2">  
                 <p class="a">También conocida como malamadre o lazo de amor. Esta agradecida planta de porte colgante necesita luz, pero sin exponerla al sol directo. Su riego debe ser más moderado en invierno ,una vez a la semana será suficiente, mientras que en verano hay que incrementarlo y hacerlo 2 o 3 veces semanales. Es una de las plantas de interior más duraderas y perfecta para iniciarse en la jardinería. Además puede reproducirse fácilmente gracias a los hijuelos que salen en alguno de sus tallos.</p>
             </div> 
 
@@ -138,7 +138,7 @@
                     <p class="textoImg">collar de corazones</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa7P2">  
                 <p class="a">Esta suculenta colgante es llamativa por sus carnosas hojas en forma de corazón y flores tubulares. Colócala en un espacio luminoso, pero protegida de los rayos de sol directo. Antes de regarla, comprueba la humedad del sustrato. En invierno, necesitará como máximo un par de riegos al mes.</p>
             </div>
 
@@ -152,7 +152,7 @@
                     <p class="textoImg">anturio</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa8P2">  
                 <p class="a">El Anthurium es una de las plantas más resistentes. Su flor es muy característica: se trata de una espiga rodeada de una hoja de color intenso en forma de corazón. Aunque su color más habitual es el rojo, también puede encontrarse en blanco, púrpura, naranja y hasta negro. Al ser una planta tropical necesita una temperatura superior a 15º. Para conseguir la humedad adecuada, pulverízala o coloca una bandeja con guijarros con agua. Así las raíces no estarán en contacto con el agua, pero la humedad que produce al evaporarse la beneficiará.</p>
             </div>
 
@@ -166,7 +166,7 @@
                     <p class="textoImg">cactus</p>
                 </div>
             </div>
-            <div class="aa">  
+            <div class="aa aa9P2">  
                 <p class="a">Pertenecen a la familia de las suculentas. Son plantas que acumulan agua para adaptarse al hábitat en el que se desarrollan y transformado sus hojas en espinas para protegerse de los animales hervíboros y prevenir la pérdida de agua que se almacena en el tronco. Necesitan varias horas de luz al día, evitar las corrientes de aire y un riego moderado, que dependerá de la estación del año. En invierno hay que reducirlo casi al máximo, en primaver hacerlo cada 10 o 12 días y en verano aumentar la frecuente y hacerlo cada 4 u 8 días (dependiendo de la climatología de tu zona).</p>
             </div>
 
