--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styleP1.css">
     <link rel="shortcut icon" href="./icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
@@ -11,35 +13,24 @@
 <body>
     <div class="grilla-general">
         <header>
-            <div class="caja-iconos"> 
-                <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/whatsappP.png" alt=""></a> 
-                <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/instagramP.png" alt=""></a>
-                <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="./icons/pinterestP.png" alt=""></a>
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-light navbar-color">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./icons/planta.png" alt="" width="30" height="24" class="d-inline-block align-text-top">evergreen</a>
 
-            <div class="caja-logo">
-                <img src="./icons/planta.png" alt="">
-            </div>
-
-        <!-- <div class="caja-buscador"> esto va en la version web 
-                <img class="lupa" src="./icons/lupa.png" alt="lupa">
-                <input type="text" placeholder="buscar">
-            </div> -->
-            
-                <div class="caja-barras">
-                    <img class="barras" src="./icons/barrasMenu.png" alt="barras menu">
-                    <p>menu</p>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./pages/interior.html">interior</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./pages/exterior.html">exterior</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./pages/aromaticas.html">aromaticas</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./pages/asesoramiento.html">asesoramiento</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="caja-links">
-                    <ul>
-                        <li><a href="./index.html">inicio</a></li>
-                        <li><a href="./pages/interior.html">interior</a></li>
-                        <li><a href="./pages/exterior.html">exterior</a></li>
-                        <li><a href="./pages/aromaticas.html">aromaticas</a></li>
-                        <li><a href="./pages/asesoramiento.html">asesoramiento</a></li>
-                    </ul>
-                </div>
-            <!--aca en responsive van las barras desplegables-->   
+            </nav>
         </header>
         <aside>
             publicidad
@@ -84,5 +75,7 @@
             </div>
         </footer>
     </div>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
