--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </main>
         <footer>
             <div>
-                <p>footer</p>
+                <p>footer hola</p>
             </div>
         </footer>
     </div>
