--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="card1P1 cardsP1">
             <div class="caja-imgCard1 caja-imgCardsP1">
-                <img class="imgCard1 imgCardsP1" src="./img/dato1.png" alt="dato1">
+                <img class="imgCard1 imgCardsP1 img-fluid" src="./img/dato1.png" alt="dato1">
             </div>    
             <div class="caja-textoCard1 caja-textoCardsP1">
                 <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
