--- a/pages/interior.html
+++ b/pages/interior.html
@@ -42,127 +42,127 @@
         </aside>
         <main>
 
-            <div class="card1P2 cardsP2">
-                <div class="caja-imgCard1 caja-imgCardsP2">
-                    <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="planta potus">
+            <div class="card1P2 cards">
+                <div class="caja-imgCard1 caja-imgCards">
+                    <img class="imgCard1 imgCards img-fluid" src="../img/potus.png" alt="planta potus">
                 </div>    
-                <div class="caja-textoCard1 caja-textoCardsP2">
+                <div class="caja-textoCard1 caja-textoCards">
                     <p class="textoImg">potus</p>
                 </div>   
             </div>
-            <div class="aa aa1P2">  
+            <div class="aa">  
                 <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
             </div> 
 
 
 
-            <div class="card2P2 cardsP2">
-                <div class="caja-imgCard2 caja-imgCardsP2">
-                    <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="planta pata de elefante">
+            <div class="card2P2 cards">
+                <div class="caja-imgCard2 caja-imgCards">
+                    <img class="imgCard2 imgCards img-fluid" src="../img/pataDeElefante.png" alt="planta pata de elefante">
                 </div>
-                <div class="caja-textoCard2 caja-textoCardsP2">  
+                <div class="caja-textoCard2 caja-textoCards">  
                     <p class="textoImg">pata de elefante</p>
                 </div>
             </div>
-            <div class="aa aa2P2">  
+            <div class="aa">  
                 <p class="a">Es una planta de interior muy alta. Puede llegar a medir un medio y medio en maceta, aunque e su hábitat natural puede alcanzar los 10 m. Se caracteriza por su grueso tronco, similar a una pata de elefante, de ahí su nombre. Es muy decorativa y sus cuidados son muy sencillos. Necesita grandes dosis de luz, pero no directa. Se recomienda un buen drenaje y comprobar la humedad de la tierra antes de regalarla.</p>
             </div> 
 
 
 
-            <div class="card3P2 cardsP2">
-                <div class="caja-imgCard3 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconera.png" alt="planta maranta leuconeura">
+            <div class="card3P2 cards">
+                <div class="caja-imgCard3 caja-imgCards">
+                    <img class="imgCard3 imgCards img-fluid" src="../img/marantaLeuconera.png" alt="planta maranta leuconeura">
                 </div>
-                <div class="caja-textoCard3 caja-textoCardsP2"> 
+                <div class="caja-textoCard3 caja-textoCards"> 
                     <p class="textoImg">maranta leuconera</p>
                 </div>
             </div>
-            <div class="aa aa3P2">  
+            <div class="aa">  
                 <p class="a">Es conocida también como Maranta tricolor y se la llama planta de la oración porque por las noches tiende a cerrar sus hojas ligeramente. Necesita mucha luz, pero indirecta para que muestre todos sus vibrantes colores, tanto de las hojas como de sus nervios. Necesita un sustrato turboso y le gusta la humedad ambiental, por lo que convendrá pulverizar sus hojas en verano. Coloca un plato con guijarros debajo de la maceta y tras los riegos elimina el agua sobrante.</p>
             </div> 
 
 
 
-            <div class="card4P2 cardsP2">
-                <div class="caja-imgCard4 caja-imgCardsP2">
-                    <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="planta helecho">
+            <div class="card4P2 cards">
+                <div class="caja-imgCard4 caja-imgCards">
+                    <img class="imgCard4 imgCards img-fluid" src="../img/helecho.png" alt="planta helecho">
                 </div>
-                <div class="caja-textoCard4 caja-textoCardsP2">    
+                <div class="caja-textoCard4 caja-textoCards">    
                     <p class="textoImg">helecho</p>
                 </div>    
             </div>
-            <div class="aa aa4P2">  
+            <div class="aa">  
                 <p class="a">Fácil de cuidar y muy decorativos, los helechos están de moda. Son muy resistentes y no requieren de mucho mantenimiento. Lo ideal es colocarlos en un lugar con semisombra ,sin sol directo,. Les gusta la humedad, aunque un riego excesivo puede provocar la pudrición de las raíces (verás también que las hojas se ponen amarillentas). Para proporcionársela colócala sobre un plato con guijarros y agua, de manera que se vea beneficiada por su evaporación. Pulverizarla también ayuda.</p>
             </div> 
 
 
 
-            <div class="card5P2 cardsP2">
-                <div class="caja-imgCard5 caja-imgCardsP2">
-                    <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="planta ficus lyrata">
+            <div class="card5P2 cards">
+                <div class="caja-imgCard5 caja-imgCards">
+                    <img class="imgCard5 imgCards img-fluid" src="../img/ficusLyrata.png" alt="planta ficus lyrata">
                 </div>    
-                <div class="caja-textoCard5 caja-textoCardsP2">
+                <div class="caja-textoCard5 caja-textoCards">
                     <p class="textoImg">ficus lyrata</p>
                 </div>    
             </div>
-            <div class="aa aa5P2">  
+            <div class="aa">  
                 <p class="a">El ficus lyrata es una planta que añade mucha naturaleza a tu casa gracias a sus ramas grandes y arqueadas, y a sus hojas puntiagudas. Su forma de arbolito quedará perfecto al lado de un gran ventanal, al pie de una escalera, junto al sofá o en cualquier rincón que necesite un subidón de vida y alegría verde. Además, ¡son muy resistentes!</p>
             </div> 
 
 
 
-            <div class="card6P2 cardsP2">
-                <div class="caja-imgCard6 caja-imgCardsP2">
-                    <img class="imgCard6 imgCardsP2" src="../img/cinta.png" alt="planta croton">
+            <div class="card6P2 cards">
+                <div class="caja-imgCard6 caja-imgCards">
+                    <img class="imgCard6 imgCards img-fluid" src="../img/cinta.png" alt="planta croton">
                 </div>
-                <div class="caja-textoCard6 caja-textoCardsP2">  
+                <div class="caja-textoCard6 caja-textoCards">  
                     <p class="textoImg">cinta</p>
                 </div>
             </div>
-            <div class="aa aa6P2">  
+            <div class="aa">  
                 <p class="a">También conocida como malamadre o lazo de amor. Esta agradecida planta de porte colgante necesita luz, pero sin exponerla al sol directo. Su riego debe ser más moderado en invierno ,una vez a la semana será suficiente, mientras que en verano hay que incrementarlo y hacerlo 2 o 3 veces semanales. Es una de las plantas de interior más duraderas y perfecta para iniciarse en la jardinería. Además puede reproducirse fácilmente gracias a los hijuelos que salen en alguno de sus tallos.</p>
             </div> 
 
 
 
-            <div class="card7P2 cardsP2">
-                <div class="caja-imgCard7 caja-imgCardsP2">
-                    <img class="imgCard7 imgCardsP2" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
+            <div class="card7P2 cards">
+                <div class="caja-imgCard7 caja-imgCards">
+                    <img class="imgCard7 imgCards img-fluid" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
                 </div>
-                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                <div class="caja-textoCard7 caja-textoCards"> 
                     <p class="textoImg">collar de corazones</p>
                 </div>
             </div>
-            <div class="aa aa7P2">  
+            <div class="aa">  
                 <p class="a">Esta suculenta colgante es llamativa por sus carnosas hojas en forma de corazón y flores tubulares. Colócala en un espacio luminoso, pero protegida de los rayos de sol directo. Antes de regarla, comprueba la humedad del sustrato. En invierno, necesitará como máximo un par de riegos al mes.</p>
             </div>
 
 
 
-            <div class="card8P2 cardsP2">
-                <div class="caja-imgCard8 caja-imgCardsP2">
-                    <img class="imgCard8 imgCardsP2" src="../img/anturio.png" alt="planta collar de corazones">
+            <div class="card8P2 cards">
+                <div class="caja-imgCard8 caja-imgCards">
+                    <img class="imgCard8 imgCards img-fluid" src="../img/anturio.png" alt="planta collar de corazones">
                 </div>
-                <div class="caja-textoCard8 caja-textoCardsP2"> 
+                <div class="caja-textoCard8 caja-textoCards"> 
                     <p class="textoImg">anturio</p>
                 </div>
             </div>
-            <div class="aa aa8P2">  
+            <div class="aa">  
                 <p class="a">El Anthurium es una de las plantas más resistentes. Su flor es muy característica: se trata de una espiga rodeada de una hoja de color intenso en forma de corazón. Aunque su color más habitual es el rojo, también puede encontrarse en blanco, púrpura, naranja y hasta negro. Al ser una planta tropical necesita una temperatura superior a 15º. Para conseguir la humedad adecuada, pulverízala o coloca una bandeja con guijarros con agua. Así las raíces no estarán en contacto con el agua, pero la humedad que produce al evaporarse la beneficiará.</p>
             </div>
 
 
 
-            <div class="card9P2 cardsP2">
-                <div class="caja-imgCard9 caja-imgCardsP2">
-                    <img class="imgCard9 imgCardsP2" src="../img/cactus.png" alt="planta collar de corazones">
+            <div class="card9P2 cards">
+                <div class="caja-imgCard9 caja-imgCards">
+                    <img class="imgCard9 imgCards img-fluid" src="../img/cactus.png" alt="planta collar de corazones">
                 </div>
-                <div class="caja-textoCard9 caja-textoCardsP2"> 
+                <div class="caja-textoCard9 caja-textoCards"> 
                     <p class="textoImg">cactus</p>
                 </div>
             </div>
-            <div class="aa aa9P2">  
+            <div class="aa">  
                 <p class="a">Pertenecen a la familia de las suculentas. Son plantas que acumulan agua para adaptarse al hábitat en el que se desarrollan y transformado sus hojas en espinas para protegerse de los animales hervíboros y prevenir la pérdida de agua que se almacena en el tronco. Necesitan varias horas de luz al día, evitar las corrientes de aire y un riego moderado, que dependerá de la estación del año. En invierno hay que reducirlo casi al máximo, en primaver hacerlo cada 10 o 12 días y en verano aumentar la frecuente y hacerlo cada 4 u 8 días (dependiendo de la climatología de tu zona).</p>
             </div>
 
